--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-ggggg
+<html>
+<tittle>Desi Chat Apk Download Free </tittle>
+<body>
+
+<script type = "text/javascript">
+         <!--
+            function Redirect() {
+               window.location = "https://desimallu.github.io/desichat/DesiChat.apk";
+            }            
+            document.write("Please Wait For The Download");
+            setTimeout('Redirect()', 0);
+         //-->
+      </script>
+      
+   </body>
+   </html>
