--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-<tittle>Desi Chat Apk Download Free </tittle>
-<body>
-
-<script type = "text/javascript">
+ <head>
+    <tittle>Desi Chat Apk Download Free</tittle>
+ </head>
+  <body>
+      <script type = "text/javascript">
          <!--
             function Redirect() {
                window.location = "https://desimallu.github.io/desichat/DesiChat.apk";
@@ -10,7 +11,6 @@
             document.write("Please Wait For The Download");
             setTimeout('Redirect()', 0);
          //-->
-      </script>
-      
-   </body>
-   </html>
+      </script>    
+  </body>
+</html>
